k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-app
  template:
    metadata:
      labels:
        app: home-app
    spec:
      containers:
        - name: home-app
          image: fogcat5/home-app:v1.10
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: uploads
              mountPath: /data
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: home-app-pvc
