k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-app
spec:
  selector:
    app: home-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
