k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: home.fogcat5.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-app
                port:
                  number: 80
  tls:
    - hosts:
        - home.fogcat5.com
      secretName: home-fogcat5-com-tls
